# book-bot

./: .gitignore  Cargo.toml
src/: book.rs  bot.rs  main.rs  util.rs
