[package]
name = "ai-mises"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-bert = "0.16"
anyhow = "1.0"
phf = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "2.0"

[dependencies.epubs]
git = "https://github.com/jac3km4/epubs"
rev = "3e67626"
